[package]
name = "qstring"
description = "Query string parser"
version = "0.5.1"
authors = ["Martin Algesten <martin@algesten.se>"]
license = "MIT"
repository = "https://github.com/algesten/qstring"
readme = "README.md"
keywords      = [ "query", "url", "querystring" ]
exclude       = [
  ".gitignore",
]

[dependencies]
percent-encoding = "1.0"
