[package]
name          = "qstring"
description   = "Query string parser"
version       = "0.6.0"
authors       = ["Martin Algesten <martin@algesten.se>"]
license       = "MIT"
repository    = "https://github.com/algesten/qstring"
documentation = "https://docs.rs/qstring"
readme        = "README.md"
keywords      = [ "query", "url", "querystring" ]
exclude       = [
  ".gitignore",
]

[dependencies]
percent-encoding = "1.0"
