[package]
name          = "qstring"
description   = "Query string parser"
version       = "0.7.2"
authors       = ["Martin Algesten <martin@algesten.se>"]
license       = "MIT"
repository    = "https://github.com/algesten/qstring"
documentation = "https://docs.rs/qstring"
readme        = "README.md"
edition       = "2018"
keywords      = [ "query", "url", "querystring" ]
exclude       = [
  ".gitignore",
]

[dependencies]
percent-encoding = "2.0"
